--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,68 +1,52 @@
 
 /*base style*/
 
-*{ box-sizing:border-box;
-	  margin: 0px;
-	  padding: 0px;
-	
+*{ 
+	box-sizing:border-box;
+
+
 /*content border box */
-}
-
-body{
-	font-family: sans-serif serif;
-	width: 100;
-
 }
 
 h1 {
 	text-align: center;
-	font-size: 1,75em;
-	margin: 50px;
-    color: black;
-    font-family: sans-serif serif;
+
 }
 
 
-p{
-
-	padding: 30px;
+p {
+	padding: 5px;
 	margin: 1px;
 	color: black;
-	font-size: 1em;
-	margin-top: 1px;
-	margin-bottom: 1px;
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 10px;
 	float: left;
+	overflow: hidden;
 }
 
-  .section {
-	position: relative;
-	border: 2px solid black;
+.section {
+     border: 1px solid black;
     background-color:#9999;
     color:black;
-     margin:0px;
-    
-    color: black; 
+    font-family: #9999;
+    margin: 5px;
     padding:0px;
-   
-    top: 2px;
-    right: 2px;
-
-
+    top: 0px;
+    right: 0px;
+    float: right;
 }
 
 #h2{
 	float: right;
 	background-color:green;
-	border: 3px solid black;
-	padding: 2px 20px;
+	border: 2px solid black;
+	padding: 1px 5px;
 	position: relative;
-	top: -2px;
-	right: -2px;
+	top: 0px;
+	right: 0px;
 	font-size: 1.25em;
     text-align: center;
     color: black;
+   
      
 
 }
@@ -72,96 +56,161 @@ p{
 	float: right;
 	
 	background-color:red;
-	border: 3px solid black;
-	padding: 2px 20px;
+	border: 2px solid black;
+	padding: 1px 5px;
 	position: relative;
-	top: -2px;
-	right: -2px;
+	top: 0px;
+	right:0px;
 	font-size: 1.25em;
     text-align: center;
    color: black;
-  
+   
 }
 #h4 {
     float: right;
     background-color:blue;
-	border: 3px solid black;
-	padding: 2px 20px;
+	border: 2px solid black;
+	padding: 1px 5px;
 	position: relative;
-	top: -2px;
-	right: -2px;
-	font-size: 125%;
+	top: 0px;
+	right: 0px;
+	font-size: 1.25em;
    text-align: center;
     color: black;
-  
+   
 
 }
 
 
 .row{
 	width:100%;
-	padding: 15px;
+	padding: 0 15px;
+
 	
 
 }
 
 
-/* Large Devices Only*/
+/*********** Large Devices Only **********/
 @media (min-width: 992px) {
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, 
 .col-lg-6,.col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, 
 .col-lg-11, .col-lg-12 {
+  
+
   float:left;
+  width: 100%;
 	}
+
 	.col-lg-4{
+		width: 33.33%
+
+}
+	.col-lg-8{
 		width: 33.33%;
+	
 	}
-	.col-lg-4{
-		width: 33.3%;
-	}
-	.col-lg-4{
-		width: 33.33%;
-	}
+	.col-lg-12{
+       width:33.33%;
 
 }
 
-/* Medium devices only*/
+/********** Medium devices only**********/
 
-@media (min-width: 768px) and (max-width: 991px){
+@media (min-width:991){
 
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5,
 	.col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10,
 	.col-md-11, .col-md-12
 	{
 		float: left;
-		margin: 5px;
-		padding:2px;
 	
+	 }
+	.col-md-1{
+		width: 8.33%;
+	}
+	.col-md-2{
+		width: 16.66%;
+	}
+	.col-md-4{
+		width: 25%;
+	}
+	.col-md-4{
+		width: 33.33%;
+	}
+	.col-md-5{
+		width: 41.66%;
 	}
 	.col-md-6{
 		width: 50%;
 	}
-	.col-md-6{
-		width: 50%;
+	.col-md-7{
+		width: 58.33%;
 	}
-	.col-md-6{
-		width: 100%;
+	.col-md-8{
+		width: 66.66%;
+	}
+	.col-md-9{
+		width: 74.99%;
+	}
+	.col-dm-10 {
+		width: 83.33%;
+	}
+	.col-md-11{
+		width: 91.66%;
+	}
+	.col-md-12{
+       width:100%;
 	}
 
 
-/* small devices only */
+/*********** small devices only **********/
 
 
 @media (max-width:767 ) {
 
-	.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5,
-	.col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10,
-	.col-xs-11, .col-xs-12
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5,
+	.col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10,
+	.col-sm-11, .col-sm-12
 	{
 		float: left;
 	}
-	.col-xs-12{
-		width: 100%;
+		
+	.col-sm-1{
+		width: 8.33%;
+	}
+	.col-sm-2{
+		width: 16.66%;
+	}
+	.col-sm-4{
+		width: 25%;
+	}
+	.col-sm-4{
+		width: 33.33%;
+	}
+	.col-sm-5{
+		width: 41.66%;
+	}
+	.col-sm-6{
+		width: 50%;
+	}
+	.col-sm-7{
+		width: 58.33%;
+	}
+	.col-sm-8{
+		width: 66.66%;
+	}
+	.col-sm-9{
+		width: 74.99%;
+	}
+	.col-sm-10 {
+		width: 83.33%;
+	}
+	.col-sm-11{
+		width: 91.66%;
+	}
+	.col-sm-12{
+       width:100%;
 
 
 }
